grammar.js
    source_file: ($) => repeat($._top_level_item),

    identifier: (_) => /[A-Za-z_][A-Za-z0-9_]*/,

    integer: (_) => /0[xX][0-9a-fA-F]+|0[bB][01]+|0[oO][0-7]+|[0-9]+/,
    string_literal: (_) =>
      token(seq('"', repeat(choice(/[^"\\\n]+/, /\\./)), '"')),
    formatted_string_literal: ($) =>
      seq(
        token(seq("f", '"')),
        repeat(choice($.formatted_string_text, $.formatted_string_interpolation)),
        '"',
      ),
    formatted_string_text: (_) => token.immediate(choice(/[^"{}\\\n]+/, /\\./)),
    formatted_string_interpolation: ($) =>
      seq("{", optional(field("value", $.expression)), "}"),
    boolean_literal: (_) => choice("true", "false"),

    numeric_suffix: (_) =>
      token.immediate(/_(?:usize|isize|[ui][0-9]+|f[0-9]+)/),

    function_attribute: ($) =>
      seq(
        "#",
        field("name", $.identifier),
        optional(field("arguments", $.metadata_arguments)),
      ),

    metadata_arguments: ($) =>
      seq(
        "(",
        repeat(
          choice(
            $.identifier,
            $.string_literal,
            $.integer_literal,
            "=",
            ",",
            $.metadata_arguments,
          ),
        ),
        ")",
      ),

    decorator_application: ($) =>
      seq("@", field("value", $.expression)),

    any_pointer_suffix: (_) => "&",
    _top_level_item: ($) =>
      choice(
        $.import_statement,
        $.macro_rules_definition,
        $.struct_definition,
        $.enum_definition,
        $.trait_definition,
        $.impl_definition,
        $.function_definition,
        $.extern_function_definition,
        $.global_let_statement,
        $.global_static_statement,
      ),

    global_static_statement: ($) =>
      seq(
        repeat(field("attribute", $.function_attribute)),
        optional(field("visibility", $.visibility_modifier)),
        "static",
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        "=",
        field("value", $.expression),
      ),

    struct_definition: ($) =>
      seq(
        optional(field("visibility", $.visibility_modifier)),
        "struct",
        field("signature", $.struct_signature),
      ),

    struct_signature: ($) =>
      seq(
        field("name", $.identifier),
        optional(field("generics", $.type_arguments)),
        optional(
          field(
            "fields",
            choice($.tuple_struct_fields, $.c_like_struct_fields),
          ),
        ),
      ),

    tuple_struct_fields: ($) => seq("(", commaSepTrailing($.type), ")"),
    c_like_struct_fields: ($) =>
      seq("{", repeat(seq($.typed_parameter, optional(","))), "}"),

    enum_definition: ($) =>
      seq(
        optional(field("visibility", $.visibility_modifier)),
        "enum",
        field("name", $.identifier),
        optional(field("generics", $.type_arguments)),
        "{",
        repeat(seq($.struct_signature, optional(","))),
        "}",
      ),

    trait_definition: ($) =>
      seq(
        optional(field("visibility", $.visibility_modifier)),
        "trait",
        field("name", $.identifier),
        optional(field("generics", $.type_arguments)),
        optional(field("bases", $.trait_bases)),
        "{",
        repeat(
          seq(
            repeat(field("attribute", $.function_attribute)),
            repeat(field("decorator", $.decorator_application)),
            field("method", $.function_signature),
          ),
        ),
        "}",
      ),

    impl_definition: ($) =>
      seq(
        "impl",
        optional(field("generics", $.type_arguments)),
        optional(field("trait_name", $.identifier)),
        optional(field("trait_args", $.type_arguments)),
        "for",
        field("target", $.type),
        field("body", $.impl_body),
      ),

    impl_body: ($) => seq("{", repeat(field("method", $.impl_method_definition)), "}"),

    impl_method_definition: ($) =>
      seq(
        repeat(field("attribute", $.function_attribute)),
        repeat(field("decorator", $.decorator_application)),
        optional(field("visibility", $.visibility_modifier)),
        field("signature", $.function_signature),
        field("body", $.block),
      ),

    function_definition: ($) =>
      seq(
        repeat(field("attribute", $.function_attribute)),
        repeat(field("decorator", $.decorator_application)),
        optional(field("visibility", $.visibility_modifier)),
        field("signature", $.function_signature),
        field("body", $.block),
      ),

    function_signature: ($) =>
      seq(
        optional(field("async", "async")),
        "fn",
        field("name", $.identifier),
        optional(field("generics", $.type_arguments)),
        "(",
        field("parameters", commaSepTrailing($.parameter)),
        ")",
        optional(seq("->", field("return_type", $.type))),
      ),

    parameter: ($) => choice($.receiver_parameter, $.typed_parameter),

    receiver_parameter: ($) =>
      choice(
        seq(
          "mut",
          "self",
          optional(seq(":", field("type", $.type))),
        ),
        seq("self", optional(seq(":", field("type", $.type)))),
      ),

    typed_parameter: ($) =>
      seq(field("name", $.identifier), ":", field("type", $.type)),

    type_arguments: ($) => seq("[", commaSepTrailing($.type), "]"),

    type: ($) =>
      prec.right(
        seq(
          optional(field("mutability", choice("mut", "frozen", "sending"))),
          optional("dyn"),
          choice(
            seq(field("name", $.identifier), optional(field("generics", $.type_arguments))),
            seq("(", commaSepTrailing($.type), ")"),
          ),
          optional(field("pointer", choice($.smart_pointer_suffix, $.any_pointer_suffix))),
        ),
      ),

    path: ($) => seq($.path_segment, repeat(seq("::", $.path_segment))),

    path_segment: ($) =>
      seq(
        field("name", $.identifier),
        optional(field("generics", $.type_arguments)),
        optional(field("pointer", $.smart_pointer_suffix)),
      ),

    block: ($) => seq("{", repeat($.statement), "}"),

    expression_block: ($) =>
      seq("{", repeat($.statement), field("value", $.expression), "}"),

    statement: ($) =>
      choice(
        $.return_statement,
        $.let_statement,
        $.do_while_statement,
        $.for_statement,
        $.while_statement,
        $.loop_statement,
        $.with_statement,
        $.if_statement,
        $.match_statement,
        $.unsafe_statement,
        $.ehir_statement,
        $.break_statement,
        $.continue_statement,
        $.assignment_statement,
        $.expression_statement,
      ),

    return_statement: ($) => seq("ret", field("value", $.expression)),

    let_statement: ($) =>
      seq(
        "let",
        optional(field("binding_mutability", "mut")),
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        "=",
        field("value", $.expression),
      ),

    with_statement: ($) =>
      prec.dynamic(1, seq(
        "with",
        field("resource", alias($._with_resource, $.expression)),
        "as",
        field("binding", $.identifier),
        field("body", $.block),
      )),

    _with_resource: ($) => prec(PREC.CALL + 1, $._statement_expression),

    expression_statement: ($) => $.expression,

    if_expression: ($) =>
      seq(
        "if",
        field("condition", $.expression),
        field("consequence", $.expression_block),
        repeat($.elif_expression_clause),
        "else",
        field("alternative", $.expression_block),
      ),

    match_expression: ($) =>
      seq(
        "match",
        field("value", $.expression),
        "{",
        repeat($.match_expression_arm),
        "}",
      ),

    match_expression_arm: ($) =>
      seq(
        field("pattern", $.match_pattern),
        optional(field("binding", $.match_binding)),
        "=>",
        field("value", choice($.expression, $.block)),
      ),

    match_pattern: ($) =>
      choice(
        "_",
        $.path,
        $.integer_literal,
        $.float_literal,
        $.formatted_string_literal,
        $.string_literal,
        $.boolean_literal,
      ),
    match_binding: ($) => seq("(", field("name", $.identifier), ")"),

    expression: ($) =>
      choice(
        $.if_expression,
        $.match_expression,
        $.unsafe_expression,
        $.range_expression,
      ),

    range_expression: ($) =>
      prec.right(
        PREC.RANGE,
        seq(
          field("start", $._statement_expression),
          optional(seq(field("operator", choice("..", "..=")), field("end", $.expression))),
        ),
      ),

    _statement_expression: ($) =>
      choice(
        $.closure_expression,
        $.macro_invocation,
        $.cast_expression,
        $.binary_expression,
        $.unary_expression,
        $.try_expression,
        $.method_call_expression,
        $.call_expression,
        $.field_access_expression,
        $.struct_initializer,
        $.parenthesized_expression,
        $.tuple_literal,
        $.array_literal,
        $.array_repeat_literal,
        $.index_expression,
        $.path,
        $.integer_literal,
        $.float_literal,
        $.formatted_string_literal,
        $.string_literal,
        $.boolean_literal,
      ),

    closure_expression: ($) =>
      prec.right(
        PREC.RANGE,
        seq(
          field(
            "parameters",
            choice(
              "||",
              seq("|", commaSep($.closure_parameter), "|"),
            ),
          ),
          field("body", choice($.expression_block, $.block, $.expression)),
        ),
      ),

    closure_parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
      ),

    tuple_literal: ($) => seq("(", commaSepTrailing($.expression), ")"),
    integer_literal: ($) =>
      seq(field("value", $.integer), optional(field("suffix", $.numeric_suffix))),

    struct_initializer: ($) =>
      seq(
        field("type", $.type),
        "{",
        commaSepTrailing($.expression),
        "}",
      ),

    argument_list: ($) => seq("(", commaSepTrailing($.expression), ")"),

    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(field("function", $.path), field("arguments", $.argument_list)),
      ),

    method_call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("receiver", $.expression),
          ".",
          field("method", $.identifier),
          optional(field("type_arguments", $.type_arguments)),
          field("arguments", $.argument_list),
        ),
      ),

    field_access_expression: ($) =>
      prec.left(
        PREC.FIELD,
        seq(
          field("object", $.expression),
          ".",
          field("field", choice($.identifier, $.integer)),
        ),
      ),
    unary_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq(
          field(
            "operator",
            choice("+", "-", "!", "~", "not", "++", "--", "await", "spawn"),
          ),
          field("operand", $.expression),
        ),
      ),
